fixed siteurl, adjusted header alignment
though the right-aligned header was eye-grabbing, it was eye-grabbing for the wrong reason. nobody wants to be annoyed by a header, eh?

--- a/theme/css/style.css
+++ b/theme/css/style.css
@@ -28,10 +28,10 @@ hgroup > h1 {
 }
 
 hgroup > h1 > a {
+    padding-left: 100px;
     font-family: arial;
     text-decoration: none;
     color: #FFF;
-    text-align: right;
     letter-spacing: 10px;
     display: block;
     width: 800px;
